[project]
name = "ComfyUI_Photography_Nodes"
description = "Photography nodes with laods of effects."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/TrophiHunter/ComfyUI_Photography_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "TrophiHunter"
DisplayName = "ComfyUI-TrophiHunter-Photography-Nodes"
Icon = ""
