[project]
name = "Photography Nodes"
description = "Photography nodes with loads of effects."
version = "1.0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/TrophiHunter/ComfyUI_Photography_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "TrophiHunter"
DisplayName = "ComfyUI-TrophiHunter-Photography-Nodes"
Icon = ""
